--- a/trunk/app/modules/supplier/languages/lang.en_US.ini
+++ b/trunk/app/modules/supplier/languages/lang.en_US.ini
@@ -29,6 +29,7 @@ permisson_supplier_delete = "Delete a supplier"
 [supplier]
 supplier_add_page_title = "Add new supplier"
 supplier_edit_page_title = "Edit supplier"
+supplier_view_page_title = "View supplier"
 supplier_list_page_title = "List of suppliers"
 supplier_list_breadcump = "List of suppliers"
 supplier_add_breadcump = "Add new supplier"
@@ -40,14 +41,16 @@ supplier_add_success = "The supplier has been created successfully."
 supplier_edit_success = "The supplier has been updated successfully."
 supplier_id = "Id"
 supplier_name = "Supplier name"
+supplier_image = "Image"
 supplier_address = "Address"
 supplier_phone = "Phone"
 supplier_email = "Email"
 supplier_hour_open = "Open Hour"
 supplier_hour_close = "Close Hour"
 
+supplier_category = "Category"
 supplier_status = "Supplier status"
-supplier_slug = "Supplier slug name"
+supplier_slug = "Slug name"
 supplier_meta = "Supplier meta"
 supplier_parent = "Parent supplier"
 supplier_add_save_button = "Save"
@@ -71,4 +74,5 @@ supplier_list_inactive_supplier_success = "The supplier <b>%s</b> has been deact
 
 user_email_required = "The email address is required"
 user_email_invalid = "The email address is invalid"
+supplier_delete_image = "Delete image"
 
